# stm32-secure-boot

./: .editorconfig  .gitattributes  .gitignore  .gitmessage  .project  CMakeLists.txt  README.md  STM32F407XX_FLASH.ld  Secure_Boot_STM32F407VET6.ioc  proj-cmds.md
Application/: .clang-tidy  .mxproject  Application.ioc  CMakeLists.txt  STM32F407VETx_APPLICATION.ld  STM32F407XX_FLASH.ld  compile_commands.json
Application/.cache/clangd/index/: cmsis_compiler.h.601BB37CD947218F.idx  cmsis_compiler.h.F5A444D8D80CABB6.idx  cmsis_gcc.h.7B9AF63799EAE01D.idx  cmsis_gcc.h.F284228B55922F15.idx  cmsis_version.h.54DCFB780AD743D4.idx  cmsis_version.h.AF169AEBC0FF60E4.idx  core_cm4.h.0CDFBBCEBE7787A7.idx  core_cm4.h.C82832A3EB6A5CFF.idx  main.c.01389BBBD69F49F1.idx  main.c.7A4FC490CF663563.idx  main.h.762014DE8891134C.idx  main.h.B05951BAF7C2E97F.idx  mpu_armv7.h.268C1105A9110C06.idx  mpu_armv7.h.E5177BFD24387999.idx  startup_stm32f407xx.s.8F7003602AF8ECB6.idx  startup_stm32f407xx.s.B52EBEF0BEFCC1A2.idx  stm32_hal_legacy.h.1F954CA83AE23B81.idx  stm32_hal_legacy.h.4A84491851DE9EC2.idx  stm32f407xx.h.198382E228564D6E.idx  stm32f407xx.h.72F8CD418C7AEF86.idx  stm32f4xx.h.70292C1627B2EAC2.idx  stm32f4xx.h.7567E18F4347719F.idx  stm32f4xx_hal.c.492B87742AFEE829.idx  stm32f4xx_hal.c.71C5992F197162FD.idx  stm32f4xx_hal.h.0AF197BEEAE06A71.idx  stm32f4xx_hal.h.9170CB8DF4E9D52A.idx  stm32f4xx_hal_conf.h.5E0C3C1E1F17C9AE.idx  stm32f4xx_hal_conf.h.72395A6A3D12C8CC.idx  stm32f4xx_hal_cortex.c.61249230C6114939.idx  stm32f4xx_hal_cortex.c.972F591952F0EBF7.idx  stm32f4xx_hal_cortex.h.84E0A517AEC9FBCB.idx  stm32f4xx_hal_cortex.h.CD96C7E676474B8E.idx  stm32f4xx_hal_def.h.18C1CB06E0C01DD8.idx  stm32f4xx_hal_def.h.7FDEC555AC8B7BA4.idx  stm32f4xx_hal_dma.c.E95D5C01CB6959E5.idx  stm32f4xx_hal_dma.c.F3A51F13B6F11DAB.idx  stm32f4xx_hal_dma.h.1243363C40BC184E.idx  stm32f4xx_hal_dma.h.EA175210E6CBB58E.idx  stm32f4xx_hal_dma_ex.c.492955E6547AB55D.idx  stm32f4xx_hal_dma_ex.c.A15B0ABE2D39C466.idx  (+58 more)
Application/Core/Src/: main.c
Application/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_cryp.h  stm32f4xx_hal_hash.h  stm32f4xx_hal_hash_ex.h  stm32f4xx_hal_spi.h
Application/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_cryp_ex.c  stm32f4xx_hal_hash.c  stm32f4xx_hal_hash_ex.c  stm32f4xx_hal_i2s.c  stm32f4xx_hal_irda.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_usart.c
Application/build_boot/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Application/build_boot/cmake/stm32cubemx/: Makefile  cmake_install.cmake
Application/cmake/: gcc-arm-none-eabi.cmake
Application/scripts/: hasher.py
Bootloader/: .clang-format  .mxproject  Bootloader.ioc  Bootloader.txt  CMakeLists.txt  STM32F407XX_FLASH.ld
Bootloader/.cache/clangd/index/: cmsis_compiler.h.39D7CF3ED628DA70.idx  cmsis_gcc.h.A52A727BCBA830C1.idx  cmsis_version.h.AF464AECC6E0202F.idx  core_cm4.h.9750349AA5197178.idx  main.c.9009916B9C6C7257.idx  main.h.6B5324A07056F1DC.idx  mpu_armv7.h.B7EE3D6D4826091D.idx  startup_stm32f407xx.s.8051B8D0667BA504.idx  stm32_hal_legacy.h.BFBA8B0AA63B5423.idx  stm32f407xx.h.3547899DF9A0A876.idx  stm32f4xx.h.165239F4CE853C78.idx  stm32f4xx_hal.c.3545F1102ED814E9.idx  stm32f4xx_hal.h.AA2BA4EF0F6342BE.idx  stm32f4xx_hal_conf.h.2329245C07DA9FE4.idx  stm32f4xx_hal_cortex.c.8B98F56687CCAEC6.idx  stm32f4xx_hal_cortex.h.77FF2B17DDB26A53.idx  stm32f4xx_hal_def.h.2BDAE56BDDE1B672.idx  stm32f4xx_hal_dma.c.B07BC0A4BE8D623C.idx  stm32f4xx_hal_dma.h.1E09E9B1771F9675.idx  stm32f4xx_hal_dma_ex.c.0DA67EF33B1B160B.idx  stm32f4xx_hal_dma_ex.h.0FF997F0225B2E25.idx  stm32f4xx_hal_exti.c.2C2FF00C02718A02.idx  stm32f4xx_hal_exti.h.0A163740BA292528.idx  stm32f4xx_hal_flash.c.351350E7486958FA.idx  stm32f4xx_hal_flash.h.78B82FE5150B3CF0.idx  stm32f4xx_hal_flash_ex.c.345FCCEA4BCE8AD3.idx  stm32f4xx_hal_flash_ex.h.A06843EC77B8774A.idx  stm32f4xx_hal_flash_ramfunc.c.74CEAC6F8B39599A.idx  stm32f4xx_hal_flash_ramfunc.h.68880BF5A4C41A1D.idx  stm32f4xx_hal_gpio.c.BC0B5BC2D13C168D.idx  stm32f4xx_hal_gpio.h.530A92A9C4145B1B.idx  stm32f4xx_hal_gpio_ex.h.A8C4F72EC44134C1.idx  stm32f4xx_hal_msp.c.6CF39A5C8F39F098.idx  stm32f4xx_hal_pwr.c.BD7F7E19BD5603E3.idx  stm32f4xx_hal_pwr.h.8D9A81881C4EFF73.idx  stm32f4xx_hal_pwr_ex.c.338CD4C3695E96F7.idx  stm32f4xx_hal_pwr_ex.h.629A5BAB51D3F8D1.idx  stm32f4xx_hal_rcc.c.8DA8645C2D2DA6C2.idx  stm32f4xx_hal_rcc.h.F68988AEC3323B22.idx  stm32f4xx_hal_rcc_ex.c.27EEC26C69362550.idx  (+9 more)
Bootloader/Core/Src/: SHA256.c  main.c
Bootloader/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_ll_spi.h
Bootloader/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_adc.c  stm32f4xx_hal_spi.c  stm32f4xx_ll_spi.c
Bootloader/cmake/stm32cubemx/: CMakeLists.txt
Drivers/CMSIS/Core_A/Include/: cmsis_gcc.h
Drivers/CMSIS/DSP/Include/: arm_common_tables.h  arm_common_tables_f16.h  arm_const_structs.h  arm_math_f16.h  arm_mve_tables.h  arm_mve_tables_f16.h
Drivers/CMSIS/DSP/Source/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_i2s.h  stm32f4xx_hal_ltdc.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_cryp.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2s_ex.c  stm32f4xx_hal_sai.c  stm32f4xx_hal_smartcard.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
(+137 files in other folders)
